crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@single-node-search-cosine.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="single-node-search-cosine"
description="One VECU insert and one cosine search."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
==== GRAPH ====
nodes=1 dim=4 entry_point=idx0 max_layer=0
node_head=[n1:L0:[0]]
==== SECTIONS ====
GRPH(len=76, blake3_8=65e74960445573a2, dim=4, nodes=1, entry_point=idx0, max_layer=0, head=[n1:L0:[0]])
VECS(len=42, blake3_8=9ec7764ec90fecdc, dim=4, nodes=1, components=4, head=[+1.000, +0.000, +0.000, +0.000])
QUNT(empty)
==== RESULT ====
search.rows
  [0] n1	-0.000000
